fixed form alignment and added placeholder copy

--- a/styles/modules.css
+++ b/styles/modules.css
@@ -48,11 +48,11 @@ nav a {
   background-image:url('https://static.pexels.com/photos/88725/pexels-photo-88725.jpeg');
   background-size:cover;
   background-attachment:fixed;
-  display:block;
   padding: 25%;
 }
 
 .search-page {
+  text-align:center;
   padding:3%;
 }
 
